Add header with name and nav bar

--- a/portfolio.html
+++ b/portfolio.html
@@ -8,5 +8,24 @@
     "
     <title>Personal Portfolio</title>
   </head>
-  <body></body>
+  <body>
+    <header id="header">
+      <div id="name-box">Airen M Stringer</div>
+      <br />
+      <div id="title-box">Front-End Web Developer</div>
+      <nav id="navbar">
+        <ul>
+            <li>
+                <a href="#welcome-section"></a>
+            </li>
+            <li>
+                <a href="#projects"></a>
+            </li>
+            <li>
+                <a href="#contact"></a>
+            </li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
